syntax = "proto3";

package io.databaton.net.databaton.model;

option java_package="io.databaton.net.databaton.model";
option java_outer_classname="DataBatonLoginMessageProto";

message DataBatonLoginMessage {

  string username = 1;
  string password = 2;
  string dstHost = 3;
  int32 dstPort = 4;
  bytes data = 5;

}