syntax = "proto3";

package io.databaton.net.databaton.model;

option java_package="io.databaton.net.databaton.tcp.model";
option java_outer_classname="DataBatonDispatchMessageProto";

message DataBatonDispatchMessage {

  string dstHost = 1;
  int32 dstPort = 2;
  bytes data = 3;

}